--- a/CAs/wk04-ca-simpleflex-image/index.html
+++ b/CAs/wk04-ca-simpleflex-image/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<!-- <link href="style.css" rel="stylesheet" type="text/css" /> -->
 	<style>
     body{
       background:gray;
@@ -24,7 +24,6 @@
 			flex-grow: 1;
 			flex-basis: 15%;
 			/* 15% for borders*/
-
 			display: flex;
 			flex-direction: column;
 			/* so child elements can use flexbox stuff too! */
@@ -47,9 +46,35 @@
 			margin-top: auto;
 		}
 
+    @media (min-width: 576px) {
+      .container{
+        /* justify-content: center; */
+        /* flex-flow: wrap row-reverse; */
+        flex-wrap: wrap;
+      }
+      .flex-item {
+			padding: 2%;
+			flex-grow: 1;
+			flex-basis: 45%;
+      display: flex;
+			/* 15% for borders */
+			flex-direction: column;
+			/* so child elements can use flexbox stuff too! */
+			/* switching on borders will force the 5th flex item to move down*/
+			border: 1px solid #D3D3D3;
+
+
+			/* let's set random images if we want to create cover images */
+			
+      background-image: url("https://picsum.photos/400/400");
+      background-size: cover;
+     
+		  }
+    }
+
 		@media (max-width: 920px) {
 			.flex-item {
-				flex: 1 21%;
+				flex: 1 45%;
 			}
       /* This is a flex shorthand */
       /* we set 
